@@ -1,16 +1,29 @@
 package org.middleheaven.util;
 
-
+/**
+ * Incrementor for {@link Character}.
+ * 
+ */
 public class CharacterIncrementor implements Incrementor<Character> {
 
 	int passe;
+	
+	/**
+	 * 
+	 * Constructor.
+	 * @param passe
+	 */
 	public CharacterIncrementor(int passe){
 		this.passe = passe;
 	}
 	
+	/**
+	 * 
+	 * {@inheritDoc}
+	 */
 	@Override
 	public Character increment(Character c) {
-		return new Character((char)(c.charValue()+passe));
+		return Character.valueOf((char)(c.charValue()+passe));
 	}
 
 	
